revert setting MaxPermSize